--- a/PearlManagementMVVM/Views/TextConverterView.xaml
+++ b/PearlManagementMVVM/Views/TextConverterView.xaml
@@ -9,7 +9,12 @@
         Title="TextConverterView"
         MinWidth="300"
         ResizeMode="NoResize"
-        SizeToContent="WidthAndHeight">
+        SizeToContent="WidthAndHeight"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.FontWeight="Medium"
+        TextElement.FontSize="14"
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
 
   <Window.DataContext>
     <ViewModels:TextConverterViewModel/>
