--- a/PearlManagementMVVM/App.xaml
+++ b/PearlManagementMVVM/App.xaml
@@ -1,9 +1,37 @@
 ﻿<Application x:Class="PearlManagementMVVM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:dragablz="clr-namespace:Dragablz;assembly=Dragablz"
              xmlns:local="clr-namespace:PearlManagementMVVM"
-             StartupUri="Views\TextConverterView.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             StartupUri="Views\HomeView.xaml">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.DeepOrange.xaml" />
+
+        <ResourceDictionary>
+          <!-- include your secondary pallette -->
+          <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/MaterialDesignColor.Yellow.xaml" />
+          </ResourceDictionary.MergedDictionaries>
+
+          <!-- include a single secondary accent color (and the associated forecolour) -->
+          <SolidColorBrush x:Key="SecondaryAccentBrush" Color="{StaticResource Accent200}"/>
+          <SolidColorBrush x:Key="SecondaryAccentForegroundBrush" Color="{StaticResource Accent200Foreground}"/>
+        </ResourceDictionary>
+
+        <!-- Include the Dragablz Material Design style -->
+        <ResourceDictionary Source="pack://application:,,,/Dragablz;component/Themes/materialdesign.xaml"/>
+
+      </ResourceDictionary.MergedDictionaries>
+
+      <!-- tell Dragablz tab control to use the Material Design theme -->
+      <Style TargetType="{x:Type dragablz:TabablzControl}" BasedOn="{StaticResource MaterialDesignTabablzControlStyle}" />
+ 
+
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
